--- a/netflix/netflix.html
+++ b/netflix/netflix.html
@@ -10,149 +10,243 @@
       src="https://kit.fontawesome.com/a10ef0afa0.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="icon" href="./favicon.ico" type="image/x-icon" sizes="16x16" />
   </head>
   <body>
     <nav>
-      <span><img class="topLogo" src="netflix_icon.png" width="38%" /></span>
-      <select name="language">
-        <option value="한국어" selected="selected">
-          한국어 <i class="fa-sharp fa-solid fa-sort-down"></i>
-        </option>
+      <span><img class="topLogo" src="netflix_icon.png" width="34%" /></span>
+      <select name="language" id="lang" class="active">
+        <option value="Korean">한국어</option>
         <option value="English">English</option>
       </select>
-      <a href="https://naver.com" target="_blank">로그인</a>
+      <a href="https://www.netflix.com/kr/login" class="loginA">로그인</a>
     </nav>
     <!-- 여기까지 헤더였습니다 -->
     <div class="intro">
       <video src="intro.mp4" id="vid" autoplay loop muted></video>
-      <div id="scroll">SCROLL</div>
-      <div><i class="fa-sharp fa-solid fa-arrow-down"></i></div>
+      <a href="#main1" class="smoothScroll">
+        <div id="scroll">SCROLL</div>
+        <i class="fa-solid fa-arrow-down fa-2x"></i>
+      </a>
     </div>
     <!-- 여기까지 영상, 1단(최상단)이었습니다 -->
-    <hr />
-    <main class="main1">
-      <div>
-        TV로 즐기세요.<br />
-        스마트 TV, PlayStation, Xbox, Chromecast, Apple Tv, 블루레이 플레이어 등
-        다양한 디바이스에서 시작하세요.
+    <div id="main1">
+      <div class="main-inner-box">
+        <img src="./holymoly.png" width="40%" alt="" />
+        <div class="enjoy">
+          TV로 즐기세요.<br />
+          스마트 TV, PlayStation, <br />Xbox, Chromecast, <br />
+          Apple TV, 블루레이 플레이어 등<br />
+          다양한 디바이스에서 시작하세요.
+        </div>
+        <div class="watch">
+          다양한 디바이스에서 시청하세요.<br />
+          각종 영화와 시리즈를 스마트폰, <br />
+          태블릿, 노트북, TV에서<br />
+          무제한으로 스트리밍하세요.<br />
+          추가 요금이 전혀 없습니다.
+        </div>
+        <img src="./image-removebg-preview2.png" width="15%" alt="" />
       </div>
-      <div>
-        다양한 디바이스에서 시청하세요.<br />
-        각종 영화와 시리즈를 스마트폰, 태블릿, 노트북, TV에서 무제한으로
-        스트리밍하세요. 추가 요금이 전혀 없습니다.
-      </div>
-    </main>
-    <hr />
+    </div>
     <!-- 여기까지 2단이었습니다 -->
     <main class="main2">
       <img
         class="concord-img"
-        src="https://assets.nflxext.com/ffe/siteui/vlv3/afc06103-4d6a-4236-b496-34b671a7e9ba/39dc98ce-1991-4d60-97c1-d3a0ef2ad327/KR-ko-20221003-popsignuptwoweeks-perspective_alpha_website_large.jpg 1800w"
+        src="https://assets.nflxext.com/ffe/siteui/vlv3/afc06103-4d6a-4236-b496-34b671a7e9ba/39dc98ce-1991-4d60-97c1-d3a0ef2ad327/KR-ko-20221003-popsignuptwoweeks-perspective_alpha_website_large.jpg"
         alt=""
       />
-      <div>
-        영화와 시리즈를 무제한으로.<br />
-        다양한 디바이스에서 시청하세요. 언제든 해지하실 수 있습니다.<br />
+      <div class="gradient"></div>
+      <div class="main2item1">영화와 시리즈를<br />무제한으로.</div>
+      <div class="main2item2">
+        다양한 디바이스에서 시청하세요. 언제든 해지하실 수 있습니다.
+      </div>
+      <div class="main2item3">
         시청할 준비가 되셨나요? 멤버십을 등록하거나 재시작하려면 이메일 주소를
         입력하세요.
       </div>
-      <br />
-      <input id="email" type="email" placeholder="이메일 주소" /><label
-        for="email"
-        >시작하기</label
-      >
+      <div class="emailSubmit">
+        <input class="email" type="email" placeholder="이메일 주소" />
+        <input class="submit" type="submit" value="시작하기" />
+      </div>
     </main>
-    <hr />
     <!-- 여기까지 3단이었습니다 -->
-    <main class="main3">
+    <div class="main3">
       <div id="grid0">
-        <div>새로운 발견이 있는 콘텐츠</div>
-        <!-- 이미지1, 이미지2, 이미지3 -->
-        <div>
-          게임<br />
+        <div class="main3item1">새로운 발견이 있는 콘텐츠</div>
+        <img src="./ngame1.png" class="main3img1" />
+        <img src="./ngame2.png" class="main3img2" />
+        <img src="./ngame3.png" class="main3img3" />
+        <div class="main3item2">
+          <i class="fa-sharp fa-solid fa-n"></i> <b>게임</b><br />
           광고도, 추가 요금도, 인앱 구매도 없습니다.<br />
           기존 멤버십으로 넷플릭스만의 게임을 무제한으로 즐겨보세요.
         </div>
       </div>
-      <div id="grid1">
-        <div>
-          공개 예정인 기대작을<br />
-          알림 설정 해보세요!
+      <div class="container1">
+        <div id="grid1">
+          <div class="grid1item1">
+            공개 예정인<br />
+            기대작을<br />
+            알림 설정<br />해보세요!
+          </div>
+          <i class="fa-solid fa-bells"></i>
+          <img src="./noticeimg.jpg" class="noticeimg" />
         </div>
-        <div>이미지를 넣을 것이다 하하</div>
-      </div>
-      <div id="grid2">
-        <div>
-          함께 해요 뿅뿅<br />
-          호버도 넣고 뿡빵
-        </div>
-        <div>이미지를 넣을 것이다 하하</div>
-      </div>
-      <div id="grid3">
-        <div>
-          오직 넷플릭스에서만 볼 수 있는<br />
-          넷플릭스 오리지날 영화 & 시리즈<br />
-          호버도 넣고 뿡빵
-        </div>
-        <div>이미지를 넣을 것이다 하하</div>
-      </div>
-      <div id="grid4">
-        <div>솔직한 2천만 개의 리뷰<br /></div>
-        <div>
-          같은 영화 & 시리즈를 시청한 사람들과<br />
-          다양한 이야기를 나눠보세요
+        <div id="grid2">
+          <div class="grid2item1">
+            키즈 계정으로<br />
+            아이들도 함께.<br />
+            <i class="fa-solid fa-heart-circle-plus"></i>
+          </div>
+          <img src="./child-solid.svg" class="kidimg" />
+          <span class="text-hover"
+            >키즈 전용 프로필을 만들어<br />자기만의 공간에서<br />
+            좋아하는 캐릭터와 즐기는 신나는 모험!<br />
+            자녀에게 이 특별한 경험을 선물하세요.<br />
+            넷플릭스 회원이라면 무료입니다.</span
+          >
         </div>
       </div>
-    </main>
-    <hr />
+      <div class="container2">
+        <div id="grid3">
+          <div class="grid3item1">
+            오직<br />
+            넷플릭스에서만!
+            <i class="fa-solid fa-heart-circle-plus"></i>
+          </div>
+          <img src="./onlynetflix.png" class="img-hover" />
+
+          <img src="./onlytoall.png" class="onlytoall" />
+          <img src="./onlyonb.png" class="onlyonb" />
+          <img src="./onlysquid.png" class="onlysquid" />
+        </div>
+        <div id="grid4">
+          <div class="grid4item1">솔직한<br />2천만 개의<br />리뷰.</div>
+          <div class="grid4item2">
+            같은 영화 & 시리즈를<br />
+            시청한 사람들과<br />
+            다양한 이야기를 나눠보세요.
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- 여기까지 4단이었습니다 -->
-    <main class="main4">
-      <h1>
-        큰 이미지 배경으로 하나 박고 반응형으로 크기 줄면 사라지게 하기<br />
-        특이한 이미지 하나 박고 반응형으로 크기 줄면 걔만 나오게 하기
-      </h1>
-    </main>
-    <hr />
+    <div class="main4">
+      <img src="./light_netf.png" class="light_netf" />
+    </div>
     <!-- 여기까지 5단이었습니다 -->
-    <main class="main5">
-      <div>
+    <div class="main5">
+      <div class="main5item">
         시청할 준비가 되셨나요? 멤버십을 등록하거나 재시작하려면 이메일 주소를
         입력하세요.
       </div>
-      <br />
-      <input id="email" type="email" placeholder="이메일 주소" /><label
-        for="email"
-        >시작하기</label
-      >
-    </main>
-    <hr />
+      <div class="emailSubmit2">
+        <input class="email" type="email" placeholder="이메일 주소" />
+        <input class="submit" type="submit" value="시작하기" />
+      </div>
+    </div>
     <!-- 여기까지 6단이었습니다 -->
-    <main class="main6">
-      <div>질문이 있으신가요? 문의 전화: 080-001-9587</div>
-      <a href="https://google.com" target="_blank">자주 묻는 질문</a>
-      <a href="https://google.com" target="_blank">고객 센터</a>
-      <a href="https://google.com" target="_blank">계정</a>
-      <a href="https://google.com" target="_blank">미디어 센터</a>
-      <a href="https://google.com" target="_blank">투자 정보(IR)</a>
-      <a href="https://google.com" target="_blank">입사 정보</a>
-      <a href="https://google.com" target="_blank">넷플릭스 지원 디바이스</a>
-      <a href="https://google.com" target="_blank">이용 약관</a>
-      <a href="https://google.com" target="_blank">개인정보</a>
-      <a href="https://google.com" target="_blank">쿠키 설정</a>
-      <a href="https://google.com" target="_blank">회사 정보</a>
-      <a href="https://google.com" target="_blank">문의하기</a>
-      <a href="https://google.com" target="_blank">속도 테스트</a>
-      <a href="https://google.com" target="_blank">법적 고지</a>
-      <a href="https://google.com" target="_blank">오직 넷플릭스에서서</a>
-      <br />
-      <select name="language">
-        <option value="한국어" selected="selected">
-          한국어 <i class="fa-sharp fa-solid fa-sort-down"></i>
-        </option>
-        <option value="English">English</option>
-      </select>
-      <div>
-        넷플릭스 대한민국<br />
+    <div class="main6">
+      <div class="main6item1">
+        질문이 있으신가요? 문의 전화:&nbsp;
+        <a href="tel:080-001-9587" class="tel"> 080-001-9587</a>
+      </div>
+      <div class="main6item2">
+        <ul style="list-style: none">
+          <li>
+            <a href="https://help.netflix.com/ko/node/412" target="_blank"
+              >자주 묻는 질문</a
+            >
+          </li>
+          <li>
+            <a href="https://help.netflix.com/ko/" target="_blank">고객 센터</a>
+          </li>
+          <li>
+            <a
+              href="https://www.netflix.com/kr/login?nextpage=https%3A%2F%2Fwww.netflix.com%2Fyouraccount"
+              target="_blank"
+              >계정</a
+            >
+          </li>
+          <li>
+            <a href="https://media.netflix.com/ko/" target="_blank"
+              >미디어 센터</a
+            >
+          </li>
+        </ul>
+        <ul style="list-style: none">
+          <li>
+            <a
+              href="https://ir.netflix.net/ir-overview/profile/default.aspx"
+              target="_blank"
+              >투자 정보(IR)</a
+            >
+          </li>
+          <li>
+            <a href="https://jobs.netflix.com/" target="_blank">입사 정보</a>
+          </li>
+          <li>
+            <a href="https://devices.netflix.com/ko/" target="_blank"
+              >넷플릭스 지원 디바이스</a
+            >
+          </li>
+          <li>
+            <a href="https://help.netflix.com/legal/termsofuse" target="_blank"
+              >이용 약관</a
+            >
+          </li>
+        </ul>
+        <ul style="list-style: none">
+          <li>
+            <a href="https://help.netflix.com/legal/privacy" target="_blank"
+              >개인정보</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.google.com/search?q=cookie&sxsrf=ALiCzsZRexsvRBhq4pEVlpLXen7_hc7UTw:1665538533441&source=lnms&tbm=isch&sa=X&ved=2ahUKEwiMzpTFxtn6AhVktGMGHTulDM0Q_AUoAXoECAIQAw&biw=1745&bih=845&dpr=1.1"
+              target="_blank"
+              >쿠키 설정</a
+            >
+          </li>
+          <li>
+            <a href="https://help.netflix.com/legal/corpinfo" target="_blank"
+              >회사 정보</a
+            >
+          </li>
+          <li>
+            <a href="https://help.netflix.com/ko/contactus" target="_blank"
+              >문의하기</a
+            >
+          </li>
+        </ul>
+        <ul style="list-style: none">
+          <li>
+            <a href="https://fast.com/ko/" target="_blank">속도 테스트</a>
+          </li>
+          <li>
+            <a href="https://help.netflix.com/legal/notices" target="_blank"
+              >법적 고지</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.netflix.com/kr/browse/genre/839338"
+              target="_blank"
+              >오직 넷플릭스에서</a
+            >
+          </li>
+        </ul>
+      </div>
+      <div class="main6item3">
+        <select name="language" id="lang2">
+          <option value="Korean">한국어</option>
+          <option value="English">English</option>
+        </select>
+      </div>
+      <div class="main6item4">넷플릭스 대한민국<br /></div>
+      <div class="main6item5">
         넷플릭스서비시스코리아 유한회사 통신판매업신고번호:
         제2018-서울종로-0426호 전화번호: 080-001-9587<br />
         대표: 레지널드 숀 톰프슨<br />
@@ -161,8 +255,9 @@
         우편번호 03161<br />
         사업자등록번호: 165-87-00119<br />
         클라우드 호스팅: Amazon Web Services Inc.<br />
-        공정거래위원회 웹사이트<br />
+        공정거래위원회 웹사이트
       </div>
-    </main>
+    </div>
+    <script src="netflix.js"></script>
   </body>
 </html>
