--- a/netflix/index.html
+++ b/netflix/index.html
@@ -4,17 +4,24 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="index.css" lo />
     <title>넷플릭스 대한민국 - 인터넷으로 시리즈와 영화를 시청하세요</title>
     <script
       src="https://kit.fontawesome.com/a10ef0afa0.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="icon" href="./favicon.ico" type="image/x-icon" sizes="16x16" />
+    <link
+      rel="icon"
+      href="./public/icon/favicon.ico"
+      type="image/x-icon"
+      sizes="16x16"
+    />
   </head>
   <body>
     <nav>
-      <span><img class="topLogo" src="netflix_icon.png" width="34%" /></span>
+      <span
+        ><img class="topLogo" src="./public/image/netflix_icon.png" width="34%"
+      /></span>
       <select name="language" id="lang" class="active">
         <option value="Korean">한국어</option>
         <option value="English">English</option>
@@ -22,7 +29,13 @@
       <a href="https://www.netflix.com/kr/login" class="loginA">로그인</a>
     </nav>
     <div class="intro">
-      <video src="intro.mp4" id="vid" autoplay loop muted></video>
+      <video
+        src="./public/image/intro.mp4"
+        id="vid"
+        autoplay
+        loop
+        muted
+      ></video>
       <a href="#main1" class="smoothScroll">
         <div id="scroll">SCROLL</div>
         <i class="fa-solid fa-arrow-down fa-2x"></i>
@@ -30,7 +43,7 @@
     </div>
     <div id="main1">
       <div class="main-inner-box">
-        <img src="./holymoly.png" width="40%" alt="" />
+        <img src="./public/image/main1-3.png" width="40%" alt="" />
         <div class="enjoy">
           TV로 즐기세요.<br />
           스마트 TV, PlayStation, <br />Xbox, Chromecast, <br />
@@ -44,7 +57,7 @@
           무제한으로 스트리밍하세요.<br />
           추가 요금이 전혀 없습니다.
         </div>
-        <img src="./image-removebg-preview2.png" width="15%" alt="" />
+        <img src="./public/image/main1-1.png" width="15%" alt="" />
       </div>
     </div>
     <main class="main2">
@@ -70,9 +83,9 @@
     <div class="main3">
       <div id="grid0">
         <div class="main3item1">새로운 발견이 있는 콘텐츠</div>
-        <img src="./ngame1.png" class="main3img1" />
-        <img src="./ngame2.png" class="main3img2" />
-        <img src="./ngame3.png" class="main3img3" />
+        <img src="./public/image/ngame1.png" class="main3img1" />
+        <img src="./public/image/ngame2.png" class="main3img2" />
+        <img src="./public/image/ngame3.png" class="main3img3" />
         <div class="main3item2">
           <i class="fa-sharp fa-solid fa-n"></i> <b>게임</b><br />
           광고도, 추가 요금도, 인앱 구매도 없습니다.<br />
@@ -87,7 +100,7 @@
             알림 설정<br />해보세요!
           </div>
           <i class="fa-solid fa-bells"></i>
-          <img src="./noticeimg.jpg" class="noticeimg" />
+          <img src="./public/image/noticeimg.jpg" class="noticeimg" />
         </div>
         <div id="grid2">
           <div class="grid2item1">
@@ -95,7 +108,7 @@
             아이들도 함께.<br />
             <i class="fa-solid fa-heart-circle-plus"></i>
           </div>
-          <img src="./child-solid.svg" class="kidimg" />
+          <img src="./public/icon/child-solid.svg" class="kidimg" />
           <span class="text-hover"
             >키즈 전용 프로필을 만들어<br />자기만의 공간에서<br />
             좋아하는 캐릭터와 즐기는 신나는 모험!<br />
@@ -111,11 +124,11 @@
             넷플릭스에서만!
             <i class="fa-solid fa-heart-circle-plus"></i>
           </div>
-          <img src="./onlynetflix.png" class="img-hover" />
+          <img src="./public/image/onlynetflix.png" class="img-hover" />
 
-          <img src="./onlytoall.png" class="onlytoall" />
-          <img src="./onlyonb.png" class="onlyonb" />
-          <img src="./onlysquid.png" class="onlysquid" />
+          <img src="./public/image/onlytoall.png" class="onlytoall" />
+          <img src="./public/image/onlyonb.png" class="onlyonb" />
+          <img src="./public/image/onlysquid.png" class="onlysquid" />
         </div>
         <div id="grid4">
           <div class="grid4item1">솔직한<br />2천만 개의<br />리뷰.</div>
@@ -128,7 +141,7 @@
       </div>
     </div>
     <div class="main4">
-      <img src="./light_netf.png" class="light_netf" />
+      <img src="./public/image/light_netf.png" class="light_netf" />
     </div>
     <div class="main5">
       <div class="main5item">
