--- a/react/index.html
+++ b/react/index.html
@@ -12,22 +12,38 @@
     ></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script type="text/babel">
-      const root = document.getElementById("root");
       function App() {
-        const [counter, setCounter] = React.useState(0);
-        const onClick = () => {
-          setCounter(counter + 1);
+        const [minutes, setMinutes] = React.useState(0);
+
+        const onChange = (event) => {
+          setMinutes(event.target.value);
         };
+        const reset = () => setMinutes(0);
         return (
           <div>
-            <h3>Total clicks: {counter}</h3>
-            <button onClick={onClick}>Click me</button>
+            <h1 className="hi">Min =&gt; Hrs Converter</h1>
+            <label htmlFor="minutes">Minutes</label>
+            <input
+              value={minutes}
+              id="minutes"
+              placeholder="Minutes"
+              type="number"
+              onChange={onChange}
+            />
+            <h4>You want to convert {minutes} to hours</h4>
+            <label htmlFor="hours">Hours</label>
+            <input
+              value={Math.floor(minutes / 60)}
+              id="hours"
+              placeholder="Hours"
+              type="number"
+            />
+            <button onClick={reset}>Reset</button>
           </div>
         );
       }
-
-      ReactDom.render(<App />, root);
-      // const container = React.createElement("div", null, h3, btn);
+      const root = document.getElementById("root");
+      ReactDOM.render(<App />, root);
     </script>
   </body>
 </html>
