--- a/react/index.html
+++ b/react/index.html
@@ -12,33 +12,28 @@
     ></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script type="text/babel">
-      function App() {
-        const [minutes, setMinutes] = React.useState(0);
+      function Btn({ banana, big }) {
+        return (
+          <button
+            style={{
+              backgroundColor: "tomato",
+              color: "white",
+              padding: "10px 20px",
+              border: 0,
+              borderRadius: 10,
+              fontSize: big ? 18 : 10,
+            }}
+          >
+            {banana}
+          </button>
+        );
+      }
 
-        const onChange = (event) => {
-          setMinutes(event.target.value);
-        };
-        const reset = () => setMinutes(0);
+      function App() {
         return (
           <div>
-            <h1 className="hi">Min =&gt; Hrs Converter</h1>
-            <label htmlFor="minutes">Minutes</label>
-            <input
-              value={minutes}
-              id="minutes"
-              placeholder="Minutes"
-              type="number"
-              onChange={onChange}
-            />
-            <h4>You want to convert {minutes} to hours</h4>
-            <label htmlFor="hours">Hours</label>
-            <input
-              value={Math.floor(minutes / 60)}
-              id="hours"
-              placeholder="Hours"
-              type="number"
-            />
-            <button onClick={reset}>Reset</button>
+            <Btn banana="Save Changes" big={true} />
+            <Btn banana="Yenana" big={false} />
           </div>
         );
       }
